--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
+    "react-slick": "^0.30.2",
     "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
